--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,10 +1,10 @@
 <main>
-  <h1>Расти с <span class="pomodoro">Pomodoro</span></h1>
+  <h1>Расти вместе с <span class="pomodoro">Pomodoro</span></h1>
   <div class="decoration decoration--leaf-1">🌱</div>
   <div class="decoration decoration--leaf-2">🌿</div>
   <p>
-    Повышайте продуктивность с техникой Pomodoro . Каждый завершенный интервал работы поливает ваше растение,
-    а перерывы подкармливают его. Вырастите свое виртуальное растение, оставаясь сосредоточенным!
+    Повышайте продуктивность с помощью техники Pomodoro. Каждый завершённый рабочий интервал поливает ваше растение,
+    а перерывы подкармливают его. Вырастите виртуальное растение, сохраняя концентрацию!
   </p>
 
   <section class="timer">
