--- a/src/app/components/_shared.scss
+++ b/src/app/components/_shared.scss
@@ -2,9 +2,10 @@ section {
   display: flex;
   flex-direction: column;
   min-height: 100%;
-  background-color: #e4e8f0;
+  background-color: rgba(68, 138, 98, 0.28);
   padding: 30px;
   margin: 0 auto;
+  color: #c2e7edbd;
 }
 
 
