--- a/src/app/components/settings/settings.scss
+++ b/src/app/components/settings/settings.scss
@@ -1,4 +1,5 @@
 @use '../_shared.scss';
+
 .settings {
   border-bottom-left-radius: 30px;
   border-top-left-radius: 30px;
@@ -13,7 +14,6 @@
     margin-bottom: 25px;
     font-size: 1.8rem;
     font-weight: 700;
-    color: #2d3748;
     text-align: center;
     position: relative;
     padding-bottom: 10px;
@@ -26,7 +26,7 @@
       transform: translateX(-50%);
       width: 200px;
       height: 1px;
-      background-color: #2d3748 ;
+      background-color: #c2e7edbd;
       border-radius: 10px;
     }
   }
@@ -52,36 +52,35 @@
     align-items: center;
     justify-content: space-between;
     position: relative;
+    gap: 5px
   }
 
   &__label {
     font-weight: 600;
-    color: #4a5568;
     font-size: 1rem;
+    flex-grow: 1;
+    text-align: start;
   }
 
   &__input {
-    width: 100px;
-    padding: 12px 15px;
-    border: 2px solid #e2e8f0;
+    width: 50px;
+    padding: 12px;
+    border: 2px solid rgba(184, 191, 198, 0.51);
     border-radius: 12px;
-    background: rgba(255, 255, 255, 0.7);
+    background: rgba(255, 255, 255, 0.42);
     font-size: 1.1rem;
     font-weight: 600;
     color: #2d3748;
     text-align: center;
     transition: all 0.3s ease;
-    box-shadow:
-      inset 2px 2px 4px rgba(0, 0, 0, 0.05),
-      0 2px 6px rgba(0, 0, 0, 0.03);
+    box-shadow: inset 2px 2px 4px rgba(0, 0, 0, 0.05),
+    0 2px 6px rgba(0, 0, 0, 0.03);
 
     &:focus {
       outline: none;
-      border-color: #4361ee;
-      box-shadow:
-        0 0 0 3px rgba(#4361ee, 0.2),
-        inset 2px 2px 4px rgba(0, 0, 0, 0.05);
-      background: white;
+      border-color: #ffffff;
+      background: rgba(0, 255, 17, 0.38);
+      color: #fff;
     }
 
     &::-webkit-outer-spin-button,
